my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDISCONST/EDISCONST.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDISCONST.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDISCONST.dml:10:22: error EDISCONST: const qualifier discarded
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDISCONST.dml:13:8: error EDISCONST: const qualifier discarded
